<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10dp"
    tools:context=".GenerateActivity">

    <Spinner
        android:id="@+id/generationTypeChooser"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/white"
        android:contentDescription="@string/generationType_name"
        android:minHeight="48dp" />

    <LinearLayout
        android:id="@+id/generationInputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/ssidTextField"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:boxStrokeColor="@color/qualifiedReaderBlue">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/ssid_prompt_text" />
        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/passwordTextField"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:boxStrokeColor="@color/qualifiedReaderBlue">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password_prompt_text"
                android:inputType="textPassword"/>
        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/urlTextField"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:boxStrokeColor="@color/qualifiedReaderBlue">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/url_text_prompt" />
        </com.google.android.material.textfield.TextInputLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/qrCodeLayout"
        android:layout_width="300dp"
        android:layout_height="300dp"
        android:layout_gravity="center"
        android:layout_margin="15dp"
        android:background="@drawable/linear_layout_colored_border_background"
        android:orientation="horizontal" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        android:padding="10dp">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/generateQrCodeBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="5dp"
            android:background="@drawable/rounded_corner"
            android:paddingLeft="15dp"
            android:paddingRight="15dp"
            android:text="@string/generate_qr_code_btn_text"
            android:textColor="@color/white"
            tools:ignore="TextContrastCheck" />

        <ImageButton
            android:id="@+id/saveQrCodeToGallery"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_marginStart="5dp"
            android:background="@drawable/rounded_corner"
            android:contentDescription="@string/download_button_description"
            app:srcCompat="@android:drawable/stat_sys_download_done"
            tools:ignore="RedundantDescriptionCheck,ImageContrastCheck" />
    </LinearLayout>

</LinearLayout>